--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,20 @@
+#logging
+logging.level.com.vega.springit=DEBUG
 
+#Actuator
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details=always
 
+#h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#datasource (default to testdb)
+spring.datasource.name=springit
+# sa | empty password
+#spring.datasource.username=
+#spring.datasource.password=
+
+#JPA & Hibernate
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
