--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #datasource (default to testdb)
-spring.datasource.name=springit
 # sa | empty password
 #spring.datasource.username=
 #spring.datasource.password=
@@ -18,3 +17,20 @@ spring.datasource.name=springit
 #JPA & Hibernate
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+
+
+#DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto"
+#property. Defaults to "create-drop" when using an embedded database and no
+#schema manager was detected. Otherwise, defaults to "none".
+# create | create-drop | none | update | validate
+#spring.jpa.hibernate.ddl-auto=
+
+
+# mysql settings
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3307/springit?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+#spring.datasource.initialization-mode=always
