Setting up link controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.h2.console.path=/h2-console
 #spring.datasource.password=
 
 #JPA & Hibernate
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 
@@ -33,4 +33,4 @@ spring.jpa.show-sql=true
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
